--- a/VRChat/66/1215366.html
+++ b/VRChat/66/1215366.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "u5HtfR+g77Yd2kPe036txjrAvkJC8u70HWf6W9XQn1A="></script>
+    "HfTBOkwJ6epin+0DT2cmaMaO9YLxVhCxYlu6zczA2zc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ドレス4","description":"バレンタインっぽい色の服です。\n\nVroidstudioワンピース用のテクスチャです。\n（モデルとスパッツは同梱されていません）\n\n\n▼内容物\n・ドレス4.png\n・ドレス4.zip(変更色3種と上記のスタンダードの詰め合わせ）\n\n▼DLされる前にお読みください\n　（Please refrain from　Use of the person who can't read the following sentences）\n\n・こちらはVroidStadio用のテクスチャです。\n3Dモデルテクスチャ用途以外への利用はしないでください。\n・著作権は放棄しておりません。\n・自分用に改変改造は自由ですが、変更の有無にかかわらず\n配布譲渡はおやめください。\n　（〇動画、VRchatなどへの使用。商用。\n　　×テクスチャを不特定多数がDLできる形でのアップロード）\n・ダウンロード、使用によって何か損害が生じても\nこちらで責任は負いかねます。\n・違法、公序良俗に違反する事への使用はご遠慮願います。\n・R-18な改造などはご遠慮ください。\n・自作発言はお止めください。\n・静止画動画、ライブ配信以外への使用に関しては法人のお客様は一度ご相談ください。\n・こちらの規約https://nogu.booth.pm/も一応目を通してください。\n\n尚、上記の文章は予告なく変更される場合があります。\nEven if you cannot read any part of this terms of use, I consider that I agreed to Terms of Use when you downloaded this data.\nカラーでご相談などありましたら（@nogvr1/Twitter）まで","url":"https://booth.pm/ja/items/1215366","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/981484f4-93cd-43d1-9788-03bb02eb5b4e/i/1215366/12b6a96c-54d5-4024-b0a9-0c6ae8df932f_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="u5HtfR+g77Yd2kPe036txjrAvkJC8u70HWf6W9XQn1A="></script>
+    nonce="HfTBOkwJ6epin+0DT2cmaMaO9YLxVhCxYlu6zczA2zc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,7 +153,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1215366/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1215366/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
