--- a/VRChat/05/1211505.html
+++ b/VRChat/05/1211505.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "k1ZdjaKIS6Ir18pKkX4/ryoFK8ISTmtVlr0GVCRMsg4="></script>
+    "oALTauTmZmBPpBXe6FBOrkhk+7SCbltDru7CnR441vI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Jaguarmeister Wunderbar","description":"ハイエンドGPUの豊かなグラフィックメモリが育んだ最上級天然ポリゴンの芳醇な香りと味わい。\nJaguarmeister Wunderbar（ヤーガーマイスター・ウンダーバール）の登場です。","url":"https://booth.pm/ja/items/1211505","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/4aa75b35-8054-46ce-91b0-e5e5bb914ce6/i/1211505/f50ed19e-db78-46ec-b6eb-ba0e20861640_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="k1ZdjaKIS6Ir18pKkX4/ryoFK8ISTmtVlr0GVCRMsg4="></script>
+    nonce="oALTauTmZmBPpBXe6FBOrkhk+7SCbltDru7CnR441vI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1211505/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               18
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1211505/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               18
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
