--- a/VRChat/94/1214194.html
+++ b/VRChat/94/1214194.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kH3gS/iVIN9fLbYv8Ch4f8NMsoAau7+4lMVFVhY1xqw="></script>
+    "VJSNke1mr9L3R4WM8VMyNuK3eGmjZRW8IpN9oR4Xvmg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"チョコレート","description":"チョコレート\n\n■ご利用方法\n使いたいアバターのProjectに当unitypackageをインポート。\nPrefabをヒエラルキーにD\u0026Dしサイズと位置を合わせてアバターのHandの等、置きたい所のボーン下に入れて下さい。\nアニメーションオーバーライドに設定するのがオススメです。\n※必ずバックアップを取ってから作業して下さい。\n\n■詳細\nポリゴン数（三角面）：816\nシェーダー：UTS2.0.5（http://unity-chan.com/download/releaseNote.php?id=UTS2_0）\nまんまるシェーダー（https://www.dropbox.com/sh/dp8b6ltr8ifgsw2/AAAwe9qWmfNLUFpNmPSE0fIga?dl=0）\n上記シェーダーを同梱、設定してあります。\n\n■デザイン詳細\n箱の金枠デザイン元データ：kraphix / Freepik（http://www.freepik.com）\n\n■免責事項\n当3Dモデルに起因または関連する、使用またはその他の扱いによって生じる一切の請求、損害、その他の義務について何らの責任も負いません。\n\n\n■お問い合わせ\nBOOTHのメッセージ機能よりお願いいたします。\n\n制作：黒井\n2019/2/4\nver1.1","url":"https://booth.pm/ja/items/1214194","offers":{"priceCurrency":"JPY","@type":"Offer","price":"550"},"image":"https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/1214194/e25b7ee6-40d2-4311-a08c-c8d20534ccad_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kH3gS/iVIN9fLbYv8Ch4f8NMsoAau7+4lMVFVhY1xqw="></script>
+    nonce="VJSNke1mr9L3R4WM8VMyNuK3eGmjZRW8IpN9oR4Xvmg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -120,6 +117,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -134,7 +133,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -175,7 +175,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1214194/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               143
@@ -190,14 +190,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1214194/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               143
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
