--- a/VRChat/40/1206940.html
+++ b/VRChat/40/1206940.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NOlf3CqUePx8IqgIcX6IBvTrls3ATgMQn/b0X80Y6VA="></script>
+    "E/dheeIXQ/DGW+01ZQdD7wKTLtfLIBui1E+nHGmw+/Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"仮想現実行定期 ICカードステッカー (2枚組)","description":"ゼンライザーのICカードステッカーが登場！\nリアルとバーチャルの世界を行き来する定期をイメージ。\n日付は世界中の人が簡単にバーチャルの世界に入れるようになった、\nVRChatのサービス開始日「2017.2.1」を記載。\n剥がしやすいシールが2枚入り！急な入用で剥がしても大丈夫。\n\n※サンプル画像は完成イメージのため、実物と異なる場合があります。","url":"https://booth.pm/ja/items/1206940","offers":{"priceCurrency":"JPY","@type":"Offer","price":"892"},"image":"https://booth.pximg.net/c/620x620/1ded946e-d918-4243-b09d-c95575f24045/i/1206940/5ffce219-fe5a-4a32-89ce-c69cb9817536_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NOlf3CqUePx8IqgIcX6IBvTrls3ATgMQn/b0X80Y6VA="></script>
+    nonce="E/dheeIXQ/DGW+01ZQdD7wKTLtfLIBui1E+nHGmw+/Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1206940/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1206940/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -329,7 +330,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/16</span>
+                                        "autolink u-text-wrap">2023/05/17</span>
                                       </div>
                                     </div>
                                   </div>
